# ExcelAlchemy

./: .gitignore  .pre-commit-config.yaml  ABOUT.md  LICENSE  README.md  README_cn.md  pyproject.toml
.github/workflows/: .precommit.yaml  python-test.yaml
excelalchemy/: __init__.py  abstract.py  alchemy.py  const.py  exc.py  exception.py  writer.py
excelalchemy/core/: abstract.py  alchemy.py  writer.py
excelalchemy/helper/: pydantic.py
excelalchemy/model/: abstract.py  excel.py  identity.py  result.py
excelalchemy/model/value_type/: __init__.py  boolean.py  date.py  date_range.py  email.py  money.py  multi_checkbox.py  number.py  number_range.py  organization.py  phone_number.py  radio.py  staff.py  string.py  tree.py  url.py
excelalchemy/plugin/esm/: __init__.py  builder.py  config.py  screen.py
excelalchemy/tool/: convertor.py
excelalchemy/types/: abstract.py  alchemy.py  field.py  header.py  identity.py  result.py
excelalchemy/types/column/: field.py  header.py
excelalchemy/types/value/: __init__.py  boolean.py  date.py  date_range.py  email.py  money.py  multi_checkbox.py  number.py  number_range.py  organization.py  phone_number.py  radio.py  staff.py  string.py  tree.py  url.py
excelalchemy/util/: convertor.py  file.py
files/: 倒入模版.xlsx  倒入模版_en.xlsx  导入结果.xlsx
tests/: __init__.py  mock_minio.py  registry.py  test_alchemy.py  test_exception.py  test_field_meta.py  test_import.py  test_simple.py  test_util.py  test_value_type.py
tests/files/: test_date_range_input.xlsx  test_date_range_missing_input_after.xlsx  test_date_range_missing_input_before.xlsx  test_import_with_merge_header.xlsx
tests/test_value_type/: test_boolean.py  test_email.py  test_multi_checkbox.py  test_multi_organization.py  test_phone_number.py  test_radio.py
tests/value_type/: test_boolean.py  test_date.py  test_daterange.py  test_email.py  test_money.py  test_multi_staff.py  test_number.py  test_number_range.py  test_single_organization.py  test_single_staff.py  test_url.py
