[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ExcelAlchemy"
authors = [{ name = "何睿", email = "hrui835@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "pandas >=1.5.1, <1.6",
    "minio >=7.0.0, <8",
    "pydantic[email] >=1.9, <2",
    "openpyxl >=3.0.10, <4",
    'pendulum >=2.1.2, <3',
]

[tool.flit.module]
name = "excelalchemy"

[project.urls]
Home = "https://github.com/SundayWindy/excelalchemy"

[project.optional-dependencies]
development = [
    "pandas-stubs",
    "black",
    "isort",
    "mypy",
    "pylint",
    "pre-commit",
    "pyright",
    "pytest",
    "coverage",
    "pytest-cov",
]

[tool.pyright]
exclude = [
    ".venv",
    "venv",
    ".git",
    "**/.mypy_cache",
    "**/__pycache__",
    "**/.pytest_cache",
]
ignore = ["pands"]
enableTypeIgnoreComments = false
reportUnusedFunction = false
typeCheckingMode = "strict"
reportUnusedImport = false
reportMissingTypeStubs = false
reportUnknownVariableType = false


extension-pkg-whitelist = ["pydantic", 'pendulum']

[tool.pylint.basic]
attr-rgx = "^[_a-z][a-z0-9_]*$"        # snake_case
variable-rgx = "^[_a-z][a-z0-9_]*$"    # snake_case
argument-rgx = "^[_a-z][a-z0-9_]*$"    # snake_case
class-rgx = "^(_?[A-Z][a-zA-Z0-9]*)*$"
method-rgx = "^[_a-z][a-z0-9_]*$"      # snake_case


[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-few-public-methods",
    "too-many-public-methods",
    "no-else-return",
    "no-else-raise",
    "fixme",
    "duplicate-code",
    "redefined-builtin",
    "broad-except",
    "abstract-class-instantiated"
]


[tool.pylint.'MASTER']
jobs = 4
score = false
ignore-paths = [
    ".git/",
    "venv/",
    ".venv/",
    ".mypy_cache/",
    "__pycache__/",
    ".pytest_cache/",
    "tests/",
    "dist/",
]
extension-pkg-whitelist = [
    "pydantic",
    "pandas",
    "pendulum",

]


[tool.black]
line-length = 120
skip-string-normalization = true


[tool.pylint.'FORMAT']
max-line-length = 120

[tool.isort]
skip_gitignore = true
profile = "black"
line_length = 120
indent = '    '
no_lines_before = 'LOCALFOLDER'
force_single_line = true

[tool.mypy]
ignore_missing_imports = true
